<resources>
    <string name="app_name">WEATHER+</string>
    <string name="Weather">Погода</string>
    <string name="temperature" />
    <string name="humidity" />
    <string name="windy" />
    <string name="teperatureCheckbox">Temperature</string>
    <string name="humidityCheckbox">Humidity</string>
    <string name="windycheckbox">Windy</string>
    <string name="city">Город</string>
    <string name="inputcity" />
    <string name="buttonok">OK</string>
    <string name="City" />
    <string name="citynamesecondact" />
    <string name="itemWindy">Скорость ветра 5 м/с</string>
    <string name="itemHumidity">Влажность воздуха 67 %</string>
    <string name="itemTemperature">Температура +13</string>
    <string name="ChooseCountry">Выбор страны:</string>

    <style name="MyTextAppearance" parent="TextAppearance.AppCompat">
        <item name="android:textColor">#A12D2E2D</item>
        <item name="android:textStyle">bold</item>
        <item name="android:textAlignment">center</item>
    </style>

</resources>
