<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textCitySecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/citynamesecondact"
        android:layout_gravity="center_vertical|bottom"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|bottom"
        android:text="@string/temperature"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/textHumidity"/>

    <TextView
        android:id="@+id/textHumidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textSize="22sp"
        android:layout_gravity="center_vertical|bottom"/>

    <TextView
        android:id="@+id/textViewWindy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/windy"
        android:textSize="22sp"
        android:layout_gravity="center_vertical|bottom"/>
</LinearLayout>